# coreason_veritas

./: .pre-commit-config.yaml  AGENTS.md  Dockerfile  README.md  REQUIREMENTS.md  The_Architecture_and_Utility_of_coreason_veritas.md  audit_findings.txt  audit_report.md  mkdocs.yml  pyproject.toml  pytest_output.txt  verify_logs.py
docs/: api.md  architecture.md  contributing.md  cookbook.md  index.md  operations.md  security.md  specification.md  usage.md  zero_copy_audit.md
src/coreason_veritas/: __init__.py  anchor.py  auditor.py  exceptions.py  gatekeeper.py  logging_utils.py  main.py  models.py  proxy.py  resilience.py  sanitizer.py  server.py  wrapper.py
tests/: conftest.py  test_advanced_edge_cases.py  test_anchor.py  test_anchor_edge_cases.py  test_anchor_env.py  test_anchor_seal.py  test_auditor.py  test_auditor_edge_cases.py  test_auditor_extra.py  test_auditor_import_error.py  test_auditor_llm.py  test_auditor_log_event.py  test_complex_data.py  test_concurrency_stress.py  test_context_leak.py  test_exceptions.py  test_exports.py  test_gatekeeper.py  test_gatekeeper_policy.py  test_holistic_scenarios.py  test_identity_audit.py  test_infrastructure.py  test_init_handshake.py  test_integration_workflow.py  test_logging_utils.py  test_main.py  test_policy_guard.py  test_proxy.py  test_quota.py  test_resilience.py  test_robustness.py  test_sanitizer.py  test_sanitizer_coverage.py  test_server.py  test_server_complex.py  test_server_extended.py  test_server_mode.py  test_server_startup_failures.py  test_side_effects.py  test_urllib3_compatibility.py  (+5 more)
tests/edge_cases/: conftest.py  test_anchor_extra_edge_cases.py  test_auditor_wrapper_extended.py  test_gatekeeper_extra_edge_cases.py  test_policy_guard_edge_cases.py  test_sanitizer_extended.py  test_wrapper_extra_edge_cases.py
tests/stress/: test_concurrency.py  test_gatekeeper_fuzz.py
(+2 files in other folders)
